Updated files to include 3 save options
Updated "iterative" in EZFIO.cfg to be an integer that can take the values of 1 (Append), 2 (Overwrite), or 3 (Do not save). 
Updated fci_iterations to be simpler and include the three options.

Also updated the output so that only N_det, energy, and pt2 are output. The user must manipulate from there.

--- a/plugins/Full_CI_ZMQ/EZFIO.cfg
+++ b/plugins/Full_CI_ZMQ/EZFIO.cfg
@@ -9,10 +9,10 @@ doc: Calculated FCI energy + PT2
 interface: ezfio
 
 [iterative]
-type:logical
-doc: Save the data at each iteration:
+type: integer
+doc: Save data at each iteration :  1(Append) | 2(Overwrite) | 3(NoSave)
 interface: ezfio,ocaml
-default:.False.
+default: 1      
 
 [n_iter]
 interface: ezfio
@@ -31,8 +31,8 @@ doc: The energy without a pt2 correction for n_det
 type: double precision 
 size: (full_ci_zmq.n_iter)
 
-[energyBefore_pt2_iter]
+[pt2_iter]
 interface: ezfio
-doc: The energy with pt2 correction for n_det
+doc: The pt2 correction for n_det
 type: double precision 
 size: (full_ci_zmq.n_iter)
