Updated files for iterative saving
Renamed fci_iterations to dump_fci_iterations_value for clarity
In EZFIO.cfg changed keyword "iterative" to "iterative_save" for clarity
Update dump_fci_iterations_value with "iterative_save" keyword
Removed call to dump_fci_iterations on line 27 in fci_zmq
Updated fci_zmq with the name change for calls

--- a/plugins/Full_CI_ZMQ/EZFIO.cfg
+++ b/plugins/Full_CI_ZMQ/EZFIO.cfg
@@ -8,7 +8,7 @@ type: double precision
 doc: Calculated FCI energy + PT2
 interface: ezfio
 
-[iterative]
+[iterative_save]
 type: integer
 doc: Save data at each iteration :  1(Append) | 2(Overwrite) | 3(NoSave)
 interface: ezfio,ocaml
