--- a/plugins/Full_CI_ZMQ/EZFIO.cfg
+++ b/plugins/Full_CI_ZMQ/EZFIO.cfg
@@ -8,4 +8,31 @@ type: double precision
 doc: Calculated FCI energy + PT2
 interface: ezfio
 
+[iterative_save]
+type: integer
+doc: Save data at each iteration :  1(Append) | 2(Overwrite) | 3(NoSave)
+interface: ezfio,ocaml
+default: 1      
 
+[n_iter]
+interface: ezfio
+doc: number of iterations
+type:integer
+
+[n_det_iter]
+interface: ezfio
+doc: number of determinants at iteration
+type: integer
+size: (full_ci_zmq.n_iter)
+ 
+[energy_iter]
+interface: ezfio
+doc: The energy without a pt2 correction for n_det
+type: double precision 
+size: (full_ci_zmq.n_iter)
+
+[pt2_iter]
+interface: ezfio
+doc: The pt2 correction for n_det
+type: double precision 
+size: (full_ci_zmq.n_iter)
